--- a/index.html
+++ b/index.html
@@ -17,15 +17,17 @@
         .calendar-day { min-height: 45px; cursor: pointer; border-radius: 6px; display: flex; align-items: center; justify-content: center; font-size: 12px; border: 1px solid transparent; background: #f1f5f9; position: relative; }
         .active-day { border: 2px solid #3b82f6 !important; background: white; }
         .dot { width: 4px; height: 4px; background: #3b82f6; border-radius: 50%; position: absolute; bottom: 4px; }
-        input, textarea { width: 100%; background: #f1f5f9; border: 1px solid #cbd5e1; padding: 10px; border-radius: 8px; outline: none; font-size: 14px; }
-        .action-btn { font-size: 9px; font-weight: bold; padding: 2px 6px; border-radius: 4px; text-transform: uppercase; border: 1px solid #e2e8f0; background: white; }
+        input, textarea { width: 100%; background: #f1f5f9; border: 1px solid #cbd5e1; padding: 8px; border-radius: 6px; outline: none; font-size: 14px; }
+        .icon-btn { font-size: 14px; opacity: 0.6; transition: opacity 0.2s; cursor: pointer; }
+        .icon-btn:hover { opacity: 1; }
+        .sub-task-container { margin-left: 28px; border-left: 2px solid #cbd5e1; padding-left: 12px; margin-top: 8px; }
     </style>
 </head>
 <body class="p-4 pb-24">
     <div class="max-w-md mx-auto">
         <header class="flex items-center mb-6">
             <img src="https://cdn-icons-png.flaticon.com/512/2098/2098402.png" class="w-8 h-8 mr-2">
-            <h1 class="text-xl font-bold italic tracking-tighter uppercase text-slate-800">The Ledger</h1>
+            <h1 class="text-xl font-bold italic tracking-tighter uppercase">The Ledger</h1>
         </header>
 
         <div id="pinContainer" class="hidden mb-6 bg-blue-600 text-white p-4 rounded-xl shadow-lg text-center">
@@ -37,8 +39,11 @@
         <div class="bg-card p-3 rounded-2xl mb-6 shadow-sm">
             <div class="flex justify-between items-center mb-3">
                 <button onclick="changeMonth(-1)" class="p-1 font-bold">◀</button>
-                <div id="monthLabel" class="font-bold text-sm uppercase tracking-widest text-slate-500 text-center"></div>
+                <div id="monthLabel" class="font-bold text-sm uppercase tracking-widest text-slate-500"></div>
                 <button onclick="changeMonth(1)" class="p-1 font-bold">▶</button>
+            </div>
+            <div class="grid grid-cols-7 gap-1 text-[9px] text-center font-black text-slate-400 mb-1 uppercase">
+                <div>SUN</div><div>MON</div><div>TUE</div><div>WED</div><div>THU</div><div>FRI</div><div>SAT</div>
             </div>
             <div id="calendarGrid" class="grid grid-cols-7 gap-1"></div>
         </div>
@@ -47,7 +52,7 @@
             <h2 id="viewTitle" class="text-xs font-black text-blue-600 uppercase mb-4 tracking-tighter">Tasks</h2>
             
             <div id="screen-tasks">
-                <input type="text" id="taskIn" placeholder="+ New Task (Enter)" onkeypress="handleKey(event, 'task')" class="mb-4">
+                <input type="text" id="taskIn" placeholder="+ New Goal (Enter)" onkeypress="handleKey(event, 'task')" class="mb-4">
                 <div id="taskList" class="space-y-4"></div>
             </div>
 
@@ -82,12 +87,16 @@
     </div>
 
     <script>
-        const KEY = 'the_ledger_private_db';
-        let db = JSON.parse(localStorage.getItem(KEY)) || { tasks: {}, exams: [], events: {}, pin: null, diaries: [] };
+        const STORAGE_KEY = 'the_ledger_private_db';
+        let db = JSON.parse(localStorage.getItem(STORAGE_KEY)) || { tasks: {}, exams: [], events: {}, pin: null, diaries: [] };
         let curDate = new Date();
         let selDate = new Date().toISOString().split('T')[0];
 
-        function save() { localStorage.setItem(KEY, JSON.stringify(db)); renderData(); renderCalendar(); }
+        function save() {
+            localStorage.setItem(STORAGE_KEY, JSON.stringify(db));
+            renderData();
+            renderCalendar();
+        }
 
         function showScreen(s) {
             ['tasks', 'countdown', 'events', 'diary'].forEach(id => {
@@ -123,73 +132,122 @@
             const tList = document.getElementById('taskList'), eList = document.getElementById('evList'), cList = document.getElementById('cdList'), dList = document.getElementById('diaryList');
             tList.innerHTML = ''; eList.innerHTML = ''; cList.innerHTML = ''; dList.innerHTML = '';
             
+            // Tasks Section
             (db.tasks[selDate] || []).forEach((t, i) => {
-                let subs = (t.subs || []).map((s, si) => `
+                let subItems = (t.subs || []).map((s, si) => `
                     <div class="flex items-center gap-2 mb-1">
                         <div class="cube-checkbox scale-75 ${s.done?'checked':''}" onclick="toggleS(${i},${si})"></div>
                         <p class="text-[11px] flex-grow ${s.done?'line-through opacity-40':''}">${s.text}</p>
-                        <button onclick="editS(${i},${si})" class="text-[8px] text-blue-400 font-bold uppercase">Edit</button>
+                        <span onclick="editS(${i},${si})" class="icon-btn">✎</span>
                     </div>`).join('');
-                tList.innerHTML += `<div class="p-3 bg-slate-50 rounded-xl border-l-4 border-blue-600">
+
+                tList.innerHTML += `<div class="p-3 bg-slate-50 rounded-xl border-l-4 border-blue-600 shadow-sm">
                     <div class="flex items-start gap-3">
                         <div class="cube-checkbox ${t.done?'checked':''}" onclick="toggleT(${i})"></div>
                         <div class="flex-grow">
                             <p class="text-sm font-bold ${t.done?'line-through opacity-40':''}">${t.text}</p>
-                            <div class="ml-4 mt-2">${subs}
-                                <input type="text" placeholder="+ Step" onkeypress="handleSub(event, ${i})" class="mt-2 text-[10px] p-1 h-6 bg-white">
+                            <div class="sub-task-container">${subItems}
+                                <input type="text" placeholder="+ Step" onkeypress="handleSub(event, ${i})" class="mt-2 text-[10px] p-1 h-6">
                             </div>
                         </div>
-                        <div class="flex flex-col gap-1">
-                            <button onclick="pinItem('TASK', '${t.text}')" class="action-btn text-blue-600">PIN</button>
-                            <button onclick="editT(${i})" class="action-btn text-slate-400">EDIT</button>
-                            <button onclick="delT(${i})" class="action-btn text-red-400">DEL</button>
+                        <div class="flex flex-col gap-2">
+                            <span onclick="pinItem('TASK', '${t.text}')" class="icon-btn text-blue-600">📌</span>
+                            <span onclick="editT(${i})" class="icon-btn text-slate-400">✎</span>
+                            <span onclick="delT(${i})" class="icon-btn text-red-500">🗑</span>
                         </div>
                     </div>
                 </div>`;
             });
 
+            // Exams Section
             db.exams.forEach((ex, i) => {
                 const diff = Math.ceil((new Date(ex.date) - new Date()) / 86400000);
                 cList.innerHTML += `<div class="p-3 bg-red-50 border border-red-100 rounded-xl flex justify-between items-center">
                     <div><p class="text-xs font-bold uppercase">${ex.name}</p><p class="text-[10px] text-red-600 font-black">${diff} DAYS LEFT</p></div>
-                    <div class="flex flex-col gap-1">
-                        <button onclick="pinItem('EXAM', '${ex.name}: ${diff} Days')" class="action-btn text-blue-600">PIN</button>
-                        <button onclick="editCD(${i})" class="action-btn text-slate-400">EDIT</button>
-                        <button onclick="delCD(${i})" class="action-btn text-red-400">DEL</button>
+                    <div class="flex gap-4">
+                        <span onclick="pinItem('EXAM', '${ex.name}: ${diff} Days')" class="icon-btn text-blue-600">📌</span>
+                        <span onclick="editCD(${i})" class="icon-btn text-slate-400">✎</span>
+                        <span onclick="delCD(${i})" class="icon-btn text-red-500">🗑</span>
                     </div>
                 </div>`;
             });
 
+            // Events Section
             (db.events[selDate] || []).forEach((e, i) => {
                 eList.innerHTML += `<div class="flex justify-between p-3 bg-blue-50 border-l-4 border-blue-500 rounded-xl">
                     <span class="text-xs font-bold uppercase">${e}</span>
-                    <div class="flex gap-2"><button onclick="editE(${i})" class="text-[9px] font-bold text-slate-400">EDIT</button><button onclick="delE(${i})" class="text-[9px] font-bold text-red-400">DEL</button></div>
+                    <div class="flex gap-4">
+                        <span onclick="editE(${i})" class="icon-btn text-slate-400">✎</span>
+                        <span onclick="delE(${i})" class="icon-btn text-red-500">🗑</span>
+                    </div>
                 </div>`;
             });
 
+            // Diary Section
             db.diaries.forEach((d, i) => {
-                dList.innerHTML += `<div class="p-3 bg-slate-50 rounded-lg border border-slate-200"><p class="text-xs italic">"${d}"</p>
-                    <div class="flex justify-end gap-3 mt-2"><button onclick="editD(${i})" class="text-[9px] font-bold text-blue-500">EDIT</button><button onclick="delD(${i})" class="text-[9px] font-bold text-red-500">DEL</button></div>
+                dList.innerHTML += `<div class="p-3 bg-slate-50 rounded-lg border border-slate-200">
+                    <p class="text-xs italic">"${d}"</p>
+                    <div class="flex justify-end gap-3 mt-2">
+                        <span onclick="editD(${i})" class="icon-btn text-blue-500">✎</span>
+                        <span onclick="delD(${i})" class="icon-btn text-red-500">🗑</span>
+                    </div>
                 </div>`;
             });
             renderPin();
         }
 
+        // --- Logic Handlers ---
         function handleKey(e, type) { if(e.key === 'Enter' && e.target.value) { if(type==='task'){ if(!db.tasks[selDate])db.tasks[selDate]=[]; db.tasks[selDate].push({text:e.target.value, done:false, subs:[]}); } else { if(!db.events[selDate])db.events[selDate]=[]; db.events[selDate].push(e.target.value); } e.target.value=''; save(); } }
         function handleSub(e, i) { if(e.key === 'Enter' && e.target.value) { db.tasks[selDate][i].subs.push({text:e.target.value, done:false}); e.target.value=''; save(); } }
         function addCD() { const n=document.getElementById('cdName').value, d=document.getElementById('cdDate').value; if(n && d){ db.exams.push({name:n, date:d}); save(); } }
         function saveDiary() { const v=document.getElementById('diaryIn').value; if(v){ db.diaries.push(v); document.getElementById('diaryIn').value=''; save(); } }
 
-        function editT(i) { const v=prompt("Edit Task:", db.tasks[selDate][i].text); if(v){ db.tasks[selDate][i].text=v; save(); } }
-        function editS(ti, si) { const v=prompt("Edit Step:", db.tasks[selDate][ti].subs[si].text); if(v){ db.tasks[selDate][ti].subs[si].text=v; save(); } }
-        function editE(i) { const v=prompt("Edit Event:", db.events[selDate][i]); if(v){ db.events[selDate][i]=v; save(); } }
-        function editCD(i) { const n=prompt("Name:", db.exams[i].name), d=prompt("Date:", db.exams[i].date); if(n&&d){ db.exams[i]={name:n, date:d}; save(); } }
-        function editD(i) { const v=prompt("Edit Note:", db.diaries[i]); if(v){ db.diaries[i]=v; save(); } }
-        function delT(i){ if(confirm("Delete task?")){ db.tasks[selDate].splice(i,1); save(); } }
-        function delE(i){ if(confirm("Delete event?")){ db.events[selDate].splice(i,1); save(); } }
-        function delCD(i){ if(confirm("Delete exam?")){ db.exams.splice(i,1); save(); } }
-        function delD(i){ if(confirm("Delete note?")){ db.diaries.splice(i,1); save(); } }
+        // --- IN-PLACE EDITING (NO POP-UPS) ---
+        function editT(i) {
+            const el = document.querySelectorAll('#taskList > div')[i].querySelector('p');
+            const old = db.tasks[selDate][i].text;
+            el.innerHTML = `<input type="text" id="editIn" value="${old}" class="w-full text-sm">`;
+            const input = document.getElementById('editIn'); input.focus();
+            input.onblur = () => { db.tasks[selDate][i].text = input.value || old; save(); };
+            input.onkeypress = (e) => { if(e.key==='Enter') input.blur(); };
+        }
+        function editS(ti, si) {
+            const el = document.querySelectorAll('#taskList > div')[ti].querySelectorAll('.sub-task-container p')[si];
+            const old = db.tasks[selDate][ti].subs[si].text;
+            el.innerHTML = `<input type="text" id="editSub" value="${old}" class="w-full text-[11px]">`;
+            const input = document.getElementById('editSub'); input.focus();
+            input.onblur = () => { db.tasks[selDate][ti].subs[si].text = input.value || old; save(); };
+            input.onkeypress = (e) => { if(e.key==='Enter') input.blur(); };
+        }
+        function editE(i) {
+            const el = document.querySelectorAll('#evList > div')[i].querySelector('span');
+            const old = db.events[selDate][i];
+            el.innerHTML = `<input type="text" id="editEv" value="${old}" class="text-xs">`;
+            const input = document.getElementById('editEv'); input.focus();
+            input.onblur = () => { db.events[selDate][i] = input.value || old; save(); };
+            input.onkeypress = (e) => { if(e.key==='Enter') input.blur(); };
+        }
+        function editCD(i) {
+            const el = document.querySelectorAll('#cdList > div')[i].querySelector('p');
+            const old = db.exams[i].name;
+            el.innerHTML = `<input type="text" id="editCd" value="${old}" class="text-xs">`;
+            const input = document.getElementById('editCd'); input.focus();
+            input.onblur = () => { db.exams[i].name = input.value || old; save(); };
+            input.onkeypress = (e) => { if(e.key==='Enter') input.blur(); };
+        }
+        function editD(i) {
+            const el = document.querySelectorAll('#diaryList > div')[i].querySelector('p');
+            const old = db.diaries[i];
+            el.innerHTML = `<textarea id="editDia" class="text-xs w-full">${old}</textarea>`;
+            const input = document.getElementById('editDia'); input.focus();
+            input.onblur = () => { db.diaries[i] = input.value || old; save(); };
+        }
 
+        // --- Delete / Toggle ---
+        function delT(i){ if(confirm("Delete task?")) { db.tasks[selDate].splice(i,1); save(); } }
+        function delE(i){ if(confirm("Delete event?")) { db.events[selDate].splice(i,1); save(); } }
+        function delCD(i){ if(confirm("Delete exam?")) { db.exams.splice(i,1); save(); } }
+        function delD(i){ if(confirm("Delete note?")) { db.diaries.splice(i,1); save(); } }
         function toggleT(i){ db.tasks[selDate][i].done = !db.tasks[selDate][i].done; save(); }
         function toggleS(ti, si){ db.tasks[selDate][ti].subs[si].done = !db.tasks[selDate][ti].subs[si].done; save(); }
         function pinItem(type, content) { db.pin = { type, content }; save(); }
