--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .dark-dot { background: white; }
         input, textarea { width: 100%; background: #f1f5f9; border: 1px solid #cbd5e1; padding: 10px; border-radius: 8px; outline: none; font-size: 14px; }
         .action-btn { font-size: 14px; opacity: 0.6; transition: opacity 0.2s; }
-        #calendarContainer { touch-action: pan-y; } /* Allow swiping horizontal but keep vertical scroll */
+        #calendarContainer { touch-action: pan-y; }
     </style>
 </head>
 <body class="p-4 pb-24">
@@ -47,25 +47,28 @@
                 <div>SUN</div><div>MON</div><div>TUE</div><div>WED</div><div>THU</div><div>FRI</div><div>SAT</div>
             </div>
             <div id="calendarGrid" class="grid grid-cols-7 gap-1"></div>
-            <p class="text-[8px] text-center mt-2 opacity-30 italic">Swipe left/right to change month</p>
         </div>
 
         <div id="mainContent" class="bg-card p-5 rounded-2xl shadow-sm min-h-[350px]">
             <h2 id="viewTitle" class="text-xs font-black text-blue-600 uppercase mb-4 tracking-tighter">Tasks</h2>
+            
             <div id="screen-tasks">
                 <input type="text" id="taskIn" placeholder="+ New Task (Enter)" onkeypress="handleKey(event, 'task')" class="mb-4">
                 <div id="taskList" class="space-y-4"></div>
             </div>
+
             <div id="screen-countdown" class="hidden space-y-4">
                 <input type="text" id="cdName" placeholder="Exam Name">
                 <input type="date" id="cdDate">
                 <button onclick="addCD()" class="w-full bg-slate-900 text-white py-3 rounded-xl font-bold text-xs uppercase">Add Exam</button>
                 <div id="cdList" class="space-y-3"></div>
             </div>
+
             <div id="screen-events" class="hidden space-y-4">
                 <input type="text" id="evIn" placeholder="+ New Event (Enter)" onkeypress="handleKey(event, 'event')">
                 <div id="evList" class="space-y-3"></div>
             </div>
+
             <div id="screen-diary" class="hidden space-y-4">
                 <textarea id="diaryIn" rows="4" placeholder="Note or Quote..." class="mb-2"></textarea>
                 <div class="flex gap-2">
@@ -91,20 +94,14 @@
         let selDate = new Date().toISOString().split('T')[0];
 
         // SWIPE LOGIC
-        let touchstartX = 0;
-        let touchendX = 0;
+        let touchstartX = 0; let touchendX = 0;
         const calendarContainer = document.getElementById('calendarContainer');
-
         calendarContainer.addEventListener('touchstart', e => { touchstartX = e.changedTouches[0].screenX; }, false);
-        calendarContainer.addEventListener('touchend', e => {
-            touchendX = e.changedTouches[0].screenX;
-            handleSwipe();
-        }, false);
-
+        calendarContainer.addEventListener('touchend', e => { touchendX = e.changedTouches[0].screenX; handleSwipe(); }, false);
         function handleSwipe() {
-            const threshold = 50; // Minimum distance for a swipe
-            if (touchendX < touchstartX - threshold) changeMonth(1); // Swipe Left -> Next
-            if (touchendX > touchstartX + threshold) changeMonth(-1); // Swipe Right -> Prev
+            const threshold = 50;
+            if (touchendX < touchstartX - threshold) changeMonth(1);
+            if (touchendX > touchstartX + threshold) changeMonth(-1);
         }
 
         function save() { localStorage.setItem(KEY, JSON.stringify(db)); renderData(); renderCalendar(); }
@@ -164,7 +161,7 @@
                             </div>
                         </div>
                         <div class="flex flex-col gap-2">
-                            <button onclick="pinItem('TASK', '${t.text}')" class="text-[9px] font-bold text-blue-600">PIN</button>
+                            <button onclick="pinItem('TASK', '${t.text}', '${selDate}')" class="text-[9px] font-bold text-blue-600 uppercase">Pin</button>
                             <button onclick="editT(${i})" class="action-btn">📝</button>
                             <button onclick="delT(${i})" class="action-btn">🗑️</button>
                         </div>
@@ -176,8 +173,8 @@
                 const diff = Math.ceil((new Date(ex.date) - new Date()) / 86400000);
                 cList.innerHTML += `<div class="p-3 bg-red-50 border border-red-100 rounded-xl flex justify-between items-center">
                     <div><p class="text-xs font-bold uppercase">${ex.name}</p><p class="text-[10px] text-red-600 font-black">${diff} DAYS LEFT</p></div>
-                    <div class="flex gap-3">
-                        <button onclick="pinItem('EXAM', '${ex.name}: ${diff} Days')" class="text-[9px] font-bold text-blue-600">PIN</button>
+                    <div class="flex flex-col gap-1">
+                        <button onclick="pinItem('EXAM', '${ex.name}: ${diff} Days', '${ex.date}')" class="text-[9px] font-bold text-blue-600 uppercase">Pin</button>
                         <button onclick="editCD(${i})" class="action-btn">📝</button>
                         <button onclick="delCD(${i})" class="action-btn">🗑️</button>
                     </div>
@@ -188,6 +185,7 @@
                 eList.innerHTML += `<div class="flex justify-between p-3 bg-blue-50 border-l-4 border-blue-500 rounded-xl">
                     <span class="text-xs font-bold uppercase">${e}</span>
                     <div class="flex gap-2">
+                        <button onclick="pinItem('EVENT', '${e}', '${selDate}')" class="text-[9px] font-bold text-blue-600 uppercase mr-2">Pin</button>
                         <button onclick="editE(${i})" class="action-btn">📝</button>
                         <button onclick="delE(${i})" class="action-btn">🗑️</button>
                     </div>
@@ -205,6 +203,7 @@
             renderPin();
         }
 
+        // IMPROVED EDITING (IN-PLACE)
         function editT(i) {
             const p = document.querySelectorAll('#taskList > div')[i].querySelector('p');
             const old = db.tasks[selDate][i].text;
@@ -256,9 +255,21 @@
         function delD(i){ if(confirm("Delete note?")){ db.diaries.splice(i,1); save(); } }
         function toggleT(i){ db.tasks[selDate][i].done = !db.tasks[selDate][i].done; save(); }
         function toggleS(ti, si){ db.tasks[selDate][ti].subs[si].done = !db.tasks[selDate][ti].subs[si].done; save(); }
-        function pinItem(type, content) { db.pin = { type, content }; save(); }
+
+        // PIN LOGIC WITH DATE FORMATTING
+        function pinItem(type, content, dateStr) {
+            let label = type;
+            if (dateStr) {
+                const d = new Date(dateStr);
+                const months = ["JAN", "FEB", "MAR", "APR", "MAY", "JUN", "JUL", "AUG", "SEP", "OCT", "NOV", "DEC"];
+                label = `${months[d.getMonth()]} ${d.getDate()} - ${type}`;
+            }
+            db.pin = { type: label, content };
+            save();
+        }
+
         function clearPin() { db.pin = null; save(); }
-        function renderPin() { const c=document.getElementById('pinContainer'); if(db.pin){ c.classList.remove('hidden'); document.getElementById('pinLabel').innerText=db.pin.type; document.getElementById('pinContent').innerText=db.pin.content; } else c.classList.add('hidden'); }
+        function renderPin() { const c = document.getElementById('pinContainer'); if(db.pin){ c.classList.remove('hidden'); document.getElementById('pinLabel').innerText=db.pin.type; document.getElementById('pinContent').innerText=db.pin.content; } else c.classList.add('hidden'); }
         function changeMonth(o){ curDate.setMonth(curDate.getMonth() + o); renderCalendar(); }
 
         renderCalendar(); showScreen('tasks');
