--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         .line-diary { width: 10px; height: 2px; background: #eab308; }
         input, textarea { width: 100%; background: #f1f5f9; border: 1px solid #cbd5e1; padding: 10px; border-radius: 8px; outline: none; font-size: 14px; }
         .dashboard-section { border-left: 4px solid #3b82f6; background: #f8fafc; padding: 10px; border-radius: 8px; margin-bottom: 8px; }
-        .del-btn { color: #ef4444; font-size: 20px; font-weight: bold; line-height: 1; }
+        .del-btn { color: #ef4444; font-size: 20px; font-weight: bold; line-height: 1; margin-left: 10px; }
+        .edit-btn { color: #3b82f6; font-size: 11px; font-weight: bold; text-transform: uppercase; border: 1px solid #3b82f6; padding: 2px 4px; border-radius: 4px; }
         .edit-input { background: white; border: 1px solid #3b82f6; padding: 2px 4px; border-radius: 4px; width: 100%; }
         #calendarContainer { touch-action: pan-y; }
     </style>
@@ -46,7 +47,7 @@
         <div id="calendarContainer" class="bg-card p-3 rounded-2xl mb-6 shadow-sm">
             <div class="flex justify-between items-center mb-3">
                 <button onclick="changeMonth(-1)" class="p-1 font-bold">◀</button>
-                <div id="monthLabel" class="font-bold text-sm uppercase tracking-widest text-slate-500"></div>
+                <div id="monthLabel" class="font-bold text-sm uppercase tracking-widest text-slate-500 text-center"></div>
                 <button onclick="changeMonth(1)" class="p-1 font-bold">▶</button>
             </div>
             <div class="grid grid-cols-7 gap-1 text-[9px] text-center font-black text-slate-400 mb-1">
@@ -60,7 +61,7 @@
                 <h2 class="text-[10px] font-black text-blue-600 uppercase tracking-widest">Day Overview</h2>
                 <span id="selectedDateDisplay" class="text-[10px] font-bold text-slate-400"></span>
             </div>
-            <div id="dashboardEntries" class="space-y-3"></div>
+            <div id="dashboardEntries" class="space-y-3 min-h-[50px]"></div>
         </div>
 
         <div id="mainContent" class="bg-card p-5 rounded-2xl shadow-sm mb-4">
@@ -124,10 +125,10 @@
             else {
                 main.classList.remove('hidden'); intel.classList.add('hidden');
                 document.getElementById('viewTitle').innerText = s.toUpperCase();
-                if(s === 'tasks') inputArea.innerHTML = `<input type="text" placeholder="+ Add task for ${selDate}" onkeypress="handleEntry(event, 'task')">`;
-                else if(s === 'exams') inputArea.innerHTML = `<input type="text" placeholder="+ Add exam name for ${selDate}" onkeypress="handleEntry(event, 'exam')">`;
-                else if(s === 'events') inputArea.innerHTML = `<input type="text" placeholder="+ Add event for ${selDate}" onkeypress="handleEntry(event, 'event')">`;
-                else if(s === 'diary') inputArea.innerHTML = `<textarea id="diaryBox" placeholder="Write note for ${selDate}">${db.diaries[selDate] || ''}</textarea><button onclick="saveDiary()" class="bg-blue-600 text-white w-full mt-2 py-2 rounded-lg font-bold text-xs">SAVE NOTE</button>`;
+                if(s === 'tasks') inputArea.innerHTML = `<input type="text" placeholder="+ New task" onkeypress="handleEntry(event, 'task')">`;
+                else if(s === 'exams') inputArea.innerHTML = `<input type="text" placeholder="+ New exam" onkeypress="handleEntry(event, 'exam')">`;
+                else if(s === 'events') inputArea.innerHTML = `<input type="text" placeholder="+ New event" onkeypress="handleEntry(event, 'event')">`;
+                else if(s === 'diary') inputArea.innerHTML = `<textarea id="diaryBox" placeholder="Write note">${db.diaries[selDate] || ''}</textarea><button onclick="saveDiary()" class="bg-blue-600 text-white w-full mt-2 py-2 rounded-lg font-bold text-xs uppercase">Save Note</button>`;
                 updateDashboard();
             }
         }
@@ -160,33 +161,37 @@
             const container = document.getElementById('dashboardEntries');
             document.getElementById('selectedDateDisplay').innerText = selDate;
             container.innerHTML = '';
-            // Exam Dashboard
             db.exams.filter(ex => ex.date === selDate).forEach(ex => {
-                container.innerHTML += `<div class="dashboard-section border-l-red-500 bg-red-50 flex justify-between items-center"><p class="text-xs font-bold uppercase">${ex.name} (EXAM)</p>
-                <div class="flex gap-4"><button onclick="pinItem('EXAM','${ex.name}','${ex.date}')" class="text-[9px] font-bold text-blue-500">PIN</button><button onclick="inlineEditCD('${ex.name}','${ex.date}', this)" class="text-lg">📝</button><button onclick="delExam('${ex.name}','${ex.date}')" class="del-btn">×</button></div></div>`;
+                container.innerHTML += `<div class="dashboard-section border-l-red-500 bg-red-50 flex justify-between items-center"><p class="text-xs font-bold uppercase">${ex.name}</p>
+                <div class="flex items-center gap-3"><button onclick="pinItem('EXAM','${ex.name}','${ex.date}')" class="text-[9px] font-bold text-blue-500">PIN</button><button onclick="inlineEditCD('${ex.name}','${ex.date}', this)" class="edit-btn">EDIT</button><button onclick="delExam('${ex.name}','${ex.date}')" class="del-btn">×</button></div></div>`;
             });
-            // Task Dashboard
             (db.tasks[selDate] || []).forEach((t, i) => {
                 container.innerHTML += `<div class="dashboard-section flex items-center gap-3"><div class="cube-checkbox ${t.done?'checked':''}" onclick="toggleTask(${i})"></div>
                 <p class="flex-grow text-sm ${t.done?'line-through opacity-40':''}">${t.text}</p>
-                <div class="flex gap-4"><button onclick="pinItem('TASK','${t.text}','${selDate}')" class="text-[9px] font-bold text-blue-500">PIN</button><button onclick="inlineEditTask(${i}, this)" class="text-lg">📝</button><button onclick="delTask(${i})" class="del-btn">×</button></div></div>`;
+                <div class="flex items-center gap-3"><button onclick="pinItem('TASK','${t.text}','${selDate}')" class="text-[9px] font-bold text-blue-500">PIN</button><button onclick="inlineEditTask(${i}, this)" class="edit-btn">EDIT</button><button onclick="delTask(${i})" class="del-btn">×</button></div></div>`;
             });
-            // Event Dashboard
             (db.events[selDate] || []).forEach((e, i) => {
                 container.innerHTML += `<div class="dashboard-section border-l-green-500 bg-green-50 flex justify-between items-center"><span class="text-sm">${e}</span>
-                <div class="flex gap-4"><button onclick="pinItem('EVENT','${e}','${selDate}')" class="text-[9px] font-bold text-blue-500">PIN</button><button onclick="inlineEditEvent(${i}, this)" class="text-lg">📝</button><button onclick="delEvent(${i})" class="del-btn">×</button></div></div>`;
+                <div class="flex items-center gap-3"><button onclick="pinItem('EVENT','${e}','${selDate}')" class="text-[9px] font-bold text-blue-500">PIN</button><button onclick="inlineEditEvent(${i}, this)" class="edit-btn">EDIT</button><button onclick="delEvent(${i})" class="del-btn">×</button></div></div>`;
             });
-            // Diary Dashboard
             if(db.diaries[selDate]) container.innerHTML += `<div class="dashboard-section border-l-yellow-500 bg-yellow-50 flex justify-between items-center"><p class="text-xs italic">"${db.diaries[selDate]}"</p><button onclick="delDiary()" class="del-btn">×</button></div>`;
             renderPin();
         }
 
-        // IN-PLACE EDITING (NO POP-UPS)
+        // CURSOR RECTIFICATION (FOCUS AT END)
+        function focusAtEnd(el) {
+            el.focus();
+            const val = el.value;
+            el.value = '';
+            el.value = val;
+        }
+
         function inlineEditTask(i, btn) {
             const p = btn.parentElement.parentElement.querySelector('p');
             const old = db.tasks[selDate][i].text;
             p.innerHTML = `<input type="text" class="edit-input" value="${old}" id="eTask">`;
-            const input = document.getElementById('eTask'); input.focus();
+            const input = document.getElementById('eTask');
+            focusAtEnd(input);
             input.onblur = () => { if(input.value) db.tasks[selDate][i].text = input.value; save(); };
             input.onkeypress = (e) => { if(e.key==='Enter') input.blur(); };
         }
@@ -194,14 +199,16 @@
             const p = btn.parentElement.parentElement.querySelector('span');
             const old = db.events[selDate][i];
             p.innerHTML = `<input type="text" class="edit-input" value="${old}" id="eEvent">`;
-            const input = document.getElementById('eEvent'); input.focus();
+            const input = document.getElementById('eEvent');
+            focusAtEnd(input);
             input.onblur = () => { if(input.value) db.events[selDate][i] = input.value; save(); };
             input.onkeypress = (e) => { if(e.key==='Enter') input.blur(); };
         }
         function inlineEditCD(name, date, btn) {
             const p = btn.parentElement.parentElement.querySelector('p');
             p.innerHTML = `<input type="text" class="edit-input" value="${name}" id="eExam">`;
-            const input = document.getElementById('eExam'); input.focus();
+            const input = document.getElementById('eExam');
+            focusAtEnd(input);
             input.onblur = () => { if(input.value) db.exams.find(ex=>ex.name===name&&ex.date===date).name = input.value; save(); };
             input.onkeypress = (e) => { if(e.key==='Enter') input.blur(); };
         }
@@ -225,7 +232,7 @@
         }
 
         function showIntelDetail(type) {
-            const list = document.getElementById('intelDetailList'); list.innerHTML = `<h4 class="text-[10px] font-black uppercase text-slate-500 mb-2">Detailed ${type} List</h4>`;
+            const list = document.getElementById('intelDetailList'); list.innerHTML = `<h4 class="text-[10px] font-black uppercase text-slate-500 mb-2">${type} List</h4>`;
             if(type==='tasks') Object.keys(db.tasks).forEach(d=>db.tasks[d].forEach(t=>list.innerHTML += `<div class="bg-white p-2 text-xs border rounded mb-1 flex justify-between"><span>${t.text}</span><span class="opacity-40">${d}</span></div>`));
             else if(type==='exams') db.exams.sort((a,b)=>new Date(a.date)-new Date(b.date)).forEach(ex=>list.innerHTML += `<div class="bg-red-50 p-2 text-xs border border-red-100 rounded mb-1 flex justify-between"><span>${ex.name}</span><span class="font-bold">${ex.date}</span></div>`);
             else if(type==='events') Object.keys(db.events).forEach(d=>db.events[d].forEach(e=>list.innerHTML += `<div class="bg-green-50 p-2 text-xs border border-green-100 rounded mb-1 flex justify-between"><span>${e}</span><span class="opacity-40">${d}</span></div>`));
@@ -236,12 +243,8 @@
         function clearPin() { db.pin=null; save(); }
         function renderPin() { const c=document.getElementById('pinContainer'); if(db.pin){ c.classList.remove('hidden'); document.getElementById('pinLabel').innerText=db.pin.type; document.getElementById('pinContent').innerText=db.pin.content; } else c.classList.add('hidden'); }
         function changeMonth(o){ curDate.setMonth(curDate.getMonth()+o); renderCalendar(); }
-
         function downloadReadableData() {
-            let doc = "--- THE LEDGER: ACADEMIC MISSION LIST ---\n\n";
-            doc += "EXAMS:\n" + db.exams.map(ex => `[${ex.date}] ${ex.name}`).join("\n") + "\n\n";
-            doc += "PENDING TASKS:\n" + Object.keys(db.tasks).map(d => db.tasks[d].filter(t=>!t.done).map(t => `[${d}] ${t.text}`).join("\n")).join("\n") + "\n\n";
-            doc += "EVENTS:\n" + Object.keys(db.events).map(d => db.events[d].map(e => `[${d}] ${e}`).join("\n")).join("\n");
+            let doc = "THE LEDGER: ACADEMIC MISSION LIST\n\nEXAMS:\n" + db.exams.map(ex => `[${ex.date}] ${ex.name}`).join("\n") + "\n\nTASKS:\n" + Object.keys(db.tasks).map(d => db.tasks[d].filter(t=>!t.done).map(t => `[${d}] ${t.text}`).join("\n")).join("\n");
             const b=new Blob([doc], {type:'text/plain'}); const a=document.createElement('a'); a.href=URL.createObjectURL(b); a.download=`TheLedger_List.txt`; a.click();
         }
 
